--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,11 +5,27 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
-        @content
+        <header class="navbar navbar-inverse navbar-fixed-top">
+        	<div class="navbar-inner">
+        		<a href="@routes.Application.index()" class="brand">Play - Concept Proof</a>
+        		<ul class="nav">
+			      <li><a href="@routes.Application.index()">Inicio</a></li>
+			      <li><a href="@routes.Cursos.index">Cursos</a></li>
+			      <li><a href="#">Link</a></li>
+			    </ul>
+            </div>
+        </header>
+        
+        <script src="@routes.Assets.at("javascripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        
+        <section id="main">
+            @content
+        </section>
     </body>
 </html>
