--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,8 @@
 
 @main("Welcome to Play 2.1") {
     
-    @play20.welcome(message, style = "Java")
+    @* @play20.welcome(message, style = "Java") *@
+    
+    @message
     
 }
