--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -11,8 +11,11 @@
     	</fieldset>
     </form>
     
-    <ul id="cursos">
-    </ul>
+    <table id="cursos" class="table table-hover">
+    	<thead></thead>
+    	<tbody></tbody>
+    	<tfoot></tfoot>
+    </table>
     
     <script src="@routes.Assets.at("javascripts/curso.js")" type="text/javascript"></script>
 }
