--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -1,6 +1,10 @@
 @(message: String)
 
-@main("Play-CP Curso") {
+@scripts = {
+	<script src="@routes.Assets.at("javascripts/curso.js")" type="text/javascript"></script>
+}
+
+@main("Play-CP Curso", scripts) {
     
     <form id="create-curso-form" action="@routes.Cursos.create()" method="post" class="form-inline">
     	<fieldset>
@@ -16,6 +20,4 @@
     	<tbody></tbody>
     	<tfoot></tfoot>
     </table>
-    
-    <script src="@routes.Assets.at("javascripts/curso.js")" type="text/javascript"></script>
 }
