--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, scripts: Html = Html(""))(content: Html)
 
 <!DOCTYPE html>
 
@@ -12,20 +12,23 @@
     <body>
         <header class="navbar navbar-inverse navbar-fixed-top">
         	<div class="navbar-inner">
-        		<a href="@routes.Application.index()" class="brand">Play - Concept Proof</a>
-        		<ul class="nav">
-			      <li><a href="@routes.Application.index()">Inicio</a></li>
-			      <li><a href="@routes.Cursos.index">Cursos</a></li>
-			      <li><a href="#">Link</a></li>
-			    </ul>
+        		<div class="container-fluid">
+	        		<a href="@routes.Application.index()" class="brand">Play - Concept Proof</a>
+	        		<ul class="nav">
+				      <li><a href="@routes.Application.index()">Inicio</a></li>
+				      <li><a href="@routes.Cursos.index">Cursos</a></li>
+				      <li><a href="#">Alumnos</a></li>
+				    </ul>
+			    </div>
             </div>
         </header>
-        
-        <script src="@routes.Assets.at("javascripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
         
         <section id="main">
             @content
         </section>
+        
+        <script src="@routes.Assets.at("javascripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        @scripts
     </body>
 </html>
