--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,25 +7,35 @@
         <title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
-        <header class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar navbar-inverse navbar-fixed-top">
         	<div class="navbar-inner">
         		<div class="container-fluid">
+        			<button type="button" class="btn btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse">
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+        			</button>
 	        		<a href="@routes.Application.index()" class="brand">Play - Concept Proof</a>
-	        		<ul class="nav">
-				      <li><a href="@routes.Application.index()">Inicio</a></li>
-				      <li><a href="@routes.Cursos.index">Cursos</a></li>
-				      <li><a href="#">Alumnos</a></li>
-				    </ul>
-			    </div>
-            </div>
-        </header>
+	        		<div class="nav-collapse collapse" style="height:0">
+		        		<ul class="nav">
+					      <li><a href="@routes.Application.index()">Inicio</a></li>
+					      <li><a href="@routes.Cursos.index">Cursos</a></li>
+					      <li><a href="#">Alumnos</a></li>
+					    </ul>
+			    	</div>
+            	</div>
+        	</div>
+        </div>
         
-        <section id="main">
-            @content
-        </section>
+        <div class="container-fluid">
+	        <section id="main">
+	            @content
+	        </section>
+        </div>
         
         <script src="@routes.Assets.at("javascripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
