Pruebas NoAjax y Scala Controller

--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -11,7 +11,8 @@
     		<legend>Crear Curso</legend>
     		<label>Nombre</label>
 	    	<input type="text" name="nombre" placeholder="Nombre del curso" />
-	    	<button id="create-curso-btn" type="submit" class="btn btn-success"><i class="icon-plus-sign icon-white"></i> Crear</button>
+	    	<button id="create-curso-btn" type="submit" class="btn btn-success"><i class="icon-plus-sign icon-white"></i> Crear (Ajax)</button>
+	    	<button type="submit" class="btn"><i class="icon-plus-sign icon-white"></i> Crear (NoAjax)</button>
     	</fieldset>
     </form>
     
