--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,8 +7,8 @@
         <title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -31,11 +31,12 @@
         	</div>
         </div>
         
-        <div class="container-fluid">
-	        <section id="main">
-	            @content
-	        </section>
-        </div>
+        <section id="main" class="container-fluid">
+        	<div class="row-fluid">
+        		<div class="span10 offset1">
+            	@content
+            </div>
+        </section>
         
         <script src="@routes.Assets.at("javascripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
