--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -1,4 +1,9 @@
-@(message: String)
+@(cursoForm: Form[Curso])
+
+@import helper._
+@import helper.custom._
+
+
 
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/curso.js")" type="text/javascript"></script>
@@ -6,15 +11,19 @@
 
 @main("Play-CP Curso", scripts) {
     
-    <form id="create-curso-form" action="@routes.Cursos.create()" method="post" class="form-inline">
+    @helper.form(action = routes.Cursos.create, 'id -> "create-curso-form") {
     	<fieldset>
     		<legend>Crear Curso</legend>
-    		<label>Nombre</label>
-	    	<input type="text" name="nombre" placeholder="Nombre del curso" />
+    		@inputText(
+                cursoForm("nombre"), 
+                '_label -> "Nombre", 
+                '_help -> "",
+                '_error -> cursoForm.error("nombre")
+            )
 	    	<button id="create-curso-btn" type="submit" class="btn btn-success"><i class="icon-plus-sign icon-white"></i> Crear (Ajax)</button>
 	    	<button type="submit" class="btn"><i class="icon-plus-sign icon-white"></i> Crear (NoAjax)</button>
     	</fieldset>
-    </form>
+    }
     
     <table id="cursos" class="table table-hover">
     	<thead></thead>
