--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -41,6 +41,7 @@
         
         <script src="@routes.Assets.at("javascripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Application.jsRoutes" type="text/javascript"></script>
         @scripts
     </body>
 </html>
