--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,10 +20,11 @@
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>
         			</button>
-	        		<a href="@routes.Application.index()" class="brand">Play - Concept Proof</a>
+	        		<a href="@routes.Application.index" class="brand">Play - Concept Proof</a>
 	        		<div class="nav-collapse collapse" style="height:0">
 		        		<ul class="nav">
-					      <li><a href="@routes.Application.index()">Inicio</a></li>
+					      <li><a href="@routes.Application.index">Inicio Java</a></li>
+					      <li><a href="@routes.ApplicationScala.index">Inicio Scala</a></li>
 					      <li><a href="@routes.Cursos.index">Cursos</a></li>
 					      <li><a href="#">Alumnos</a></li>
 					    </ul>
@@ -41,6 +42,8 @@
         
         <script src="@routes.Assets.at("javascripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/underscore.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/backbone.js")" type="text/javascript"></script>
         <script src="@routes.Application.jsRoutes" type="text/javascript"></script>
         @scripts
     </body>
