--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
     </head>
     <body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <header class="navbar navbar-inverse navbar-fixed-top">
         	<div class="navbar-inner">
         		<div class="container-fluid">
         			<button type="button" class="btn btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse">
@@ -31,7 +31,7 @@
 			    	</div>
             	</div>
         	</div>
-        </div>
+        </header>
         
         <section id="main" class="container-fluid">
         	<div class="row-fluid">
