--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -3,19 +3,16 @@
 @import helper._
 @import helper.custom._
 
-
-
-@scripts = {
-	<script src="@routes.Assets.at("javascripts/curso.js")" type="text/javascript"></script>
-}
-
 @main("Play-CP Curso", scripts) {
     
-    <div id="form-curso-container">
+    <div id="addCursoContainer">
+    	<form id="addCurso" action="#">
+   		
+		</form>
     </div>
     
-    <div id="list-curso-container">
-	    <table id="cursos" class="table table-hover">
+    <div id="cursos">
+		<table id="cursos" class="table table-hover">
 	    	<thead>
 	    		<tr>
 	    			<th>Id</th>
@@ -27,11 +24,30 @@
 	    </table>
     </div>
     
-    <div id="curso-list-template" class="backbone-template">
-    	<table id="cursos" class="table table-hover">
-	    	<tbody>
-	    		
-	    	</tbody>
-	    </table>
-    </div>
+    <script id="addCursoTemplate" type="text/template">
+		<legend>Crear Curso</legend>
+		<div class="control-group" id="nombre_field">
+			<label class="control-label" for="nombre">Nombre</label>
+			<div class="controls">
+				<input type="text" name="nombre" id="nombre">
+				<span class="help-inline"></span>
+			</div>
+		</div>
+		<input type="hidden" name="id" id="id">
+    	<button id="add" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
+    </script>
+    
+    <script id="cursoTemplate" type="text/template">
+		<td class="curso-id"><a href="#" class="edit"><%=id%></a></td>
+		<td class="curso-nombre"><a href="#" class="edit"><%=nombre%></a></td>
+    </script>
+}
+
+@scripts = {
+	<script src="@routes.Assets.at("javascripts/models/curso.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/collections/cursos.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/views/curso.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/views/cursos.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/views/addCurso.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/app.js")" type="text/javascript"></script>
 }
