--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -45,6 +45,9 @@
         <script src="@routes.Assets.at("javascripts/underscore.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/backbone.js")" type="text/javascript"></script>
         <script src="@routes.Application.jsRoutes" type="text/javascript"></script>
+        <script type="text/javascript">
+			var app = app || {};
+		</script>
         @scripts
     </body>
 </html>
