Entendiendo Backbone.js

--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -11,7 +11,7 @@
 		</form>
     </div>
     
-    <div id="cursos">
+    <div id="cursosContainer">
 		<table id="cursos" class="table table-hover">
 	    	<thead>
 	    		<tr>
