Eliminar controllers Scala

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -23,8 +23,7 @@
 	        		<a href="@routes.Application.index" class="brand">Play - Concept Proof</a>
 	        		<div class="nav-collapse collapse" style="height:0">
 		        		<ul class="nav">
-					      <li><a href="@routes.Application.index">Inicio Java</a></li>
-					      <li><a href="@routes.ApplicationScala.index">Inicio Scala</a></li>
+					      <li><a href="@routes.Application.index">Inicio</a></li>
 					      <li><a href="@routes.Cursos.index">Cursos</a></li>
 					      <li><a href="#">Alumnos</a></li>
 					    </ul>
