--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -23,31 +23,8 @@
 	    	<tfoot></tfoot>
 	    </table>
     </div>
-    
-    <script id="addCursoTemplate" type="text/template">
-		<legend>Crear Curso</legend>
-		<div class="control-group" id="nombre_field">
-			<label class="control-label" for="nombre">Nombre</label>
-			<div class="controls">
-				<input type="text" name="nombre" id="nombre">
-				<span class="help-inline"></span>
-			</div>
-		</div>
-		<input type="hidden" name="id" id="id">
-    	<button id="add" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
-    </script>
-    
-    <script id="cursoTemplate" type="text/template">
-		<td class="curso-id"><a href="#" class="edit"><%=id%></a></td>
-		<td class="curso-nombre"><a href="#" class="edit"><%=nombre%></a></td>
-    </script>
 }
 
 @scripts = {
-	<script src="@routes.Assets.at("javascripts/models/curso.js")" type="text/javascript"></script>
-	<script src="@routes.Assets.at("javascripts/collections/cursos.js")" type="text/javascript"></script>
-	<script src="@routes.Assets.at("javascripts/views/curso.js")" type="text/javascript"></script>
-	<script src="@routes.Assets.at("javascripts/views/cursos.js")" type="text/javascript"></script>
-	<script src="@routes.Assets.at("javascripts/views/addCurso.js")" type="text/javascript"></script>
-	<script src="@routes.Assets.at("javascripts/app.js")" type="text/javascript"></script>
+	@helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/app").url)
 }
