--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -5,14 +5,21 @@
 
 @main("Play-CP Curso", scripts) {
     
-    <div id="addCursoContainer">
+    <div id="cursos">
     	<form id="addCurso" action="#">
-   		
+   			<legend>Crear Curso</legend>
+			<div class="control-group" id="nombre_field">
+				<label class="control-label" for="nombre">Nombre</label>
+				<div class="controls">
+					<input type="text" name="nombre" id="nombre">
+					<span class="help-inline"></span>
+				</div>
+			</div>
+			<input type="hidden" name="id" id="id">
+			<button id="add" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
 		</form>
-    </div>
-    
-    <div id="cursosContainer">
-		<table id="cursos" class="table table-hover">
+		
+		<table class="table table-hover">
 	    	<thead>
 	    		<tr>
 	    			<th>Id</th>
