main.scala.html: añadir </div> a <div> sin cerrar

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -36,6 +36,7 @@
         	<div class="row-fluid">
         		<div class="span10 offset1">
             	@content
+            	</div>
             </div>
         </section>
         
