--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -19,16 +19,8 @@
 			<button id="add" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
 		</form>
 		
-		<table class="table table-hover">
-	    	<thead>
-	    		<tr>
-	    			<th>Id</th>
-	    			<th>Nombre</th>
-	    		</tr>
-	    	</thead>
-	    	<tbody></tbody>
-	    	<tfoot></tfoot>
-	    </table>
+		<div id="cursos-list">
+		</div>
     </div>
 }
 
