--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -6,21 +6,9 @@
 @main("Play-CP Curso", scripts) {
     
     <div id="cursos">
-    	<form id="addCurso" action="#">
-   			<legend>Crear Curso</legend>
-			<div class="control-group" id="nombre_field">
-				<label class="control-label" for="nombre">Nombre</label>
-				<div class="controls">
-					<input type="text" name="nombre" id="nombre">
-					<span class="help-inline"></span>
-				</div>
-			</div>
-			<input type="hidden" name="id" id="id">
-			<button id="add" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
-		</form>
+    	<div id="form"></div>
 		
-		<div id="cursos-list">
-		</div>
+		<div id="list"></div>
     </div>
 }
 
