--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -13,5 +13,5 @@
 }
 
 @scripts = {
-	@helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/app").url)
+	@helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url)
 }
