Marionette.Layout y Marionette.Controller: ejemplo

--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -4,12 +4,7 @@
 @import helper.custom._
 
 @main("Play-CP Curso", scripts) {
-    
-    <div id="cursos">
-    	<div id="form"></div>
-		
-		<div id="list"></div>
-    </div>
+	<div id="container"></div>
 }
 
 @scripts = {
