Backbone+Syphon: refactorizar Curso.create()

--- a/public/templates/cursoForm.html
+++ b/public/templates/cursoForm.html
@@ -1,4 +1,4 @@
-<form id="addCurso" action="#">
+<form id="cursoForm" action="#">
  	<legend>Crear Curso</legend>
 	<div class="control-group" id="nombre_field">
 		<label class="control-label" for="nombre">Nombre</label>
