--- a/public/templates/cursoForm.html
+++ b/public/templates/cursoForm.html
@@ -7,5 +7,5 @@
 			<span class="help-inline"></span>
 		</div>
 	</div>
-	<button id="add" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
+	<button id="save" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
 </form>
