--- a/app/views/curso/list.scala.html
+++ b/app/views/curso/list.scala.html
@@ -4,7 +4,7 @@
 @import helper.custom._
 
 @main("Play-CP Curso", scripts) {
-	<div id="container"></div>
+	<div id="curso-container"></div>
 }
 
 @scripts = {
