--- a/app/views/helper/custom/twitterBootstrapFieldConstructor.scala.html
+++ b/app/views/helper/custom/twitterBootstrapFieldConstructor.scala.html
@@ -11,7 +11,7 @@
     <label class="control-label" for="@elements.id">@elements.label(elements.lang)</label>
     <div class="controls">
         @elements.input
-        <span class="help-inline">@elements.errors(elements.lang).mkString(", ")</span>
+        <span class="help-block">@elements.errors(elements.lang).mkString(", ")</span>
         @*<span class="help-block">@elements.infos(elements.lang).mkString(", ")</span>*@ 
     </div>
 </div>
