--- a/public/templates/cursoForm.html
+++ b/public/templates/cursoForm.html
@@ -1,11 +1,12 @@
-<form id="cursoForm" action="#">
+<form id="cursoForm" action="#" role="form">
  	<legend>Crear Curso</legend>
-	<div class="control-group" id="nombre_field">
-		<label class="control-label" for="nombre">Nombre</label>
-		<div class="controls">
-			<input type="text" name="nombre" id="nombre">
-			<span class="help-inline"></span>
+ 	<div class="row">
+		<div class="form-group col-md-4" id="nombre_field">
+			<label for="nombre">Nombre</label>
+			<input type="text" name="nombre" id="nombre" class="form-control">
 		</div>
 	</div>
-	<button id="save" type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> Guardar</button>
+	<div class="form-group">
+		<button id="save" type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></i> Guardar</button>
+	</div>
 </form>
