--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,39 +7,39 @@
         <title>@title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link rel="stylesheet" type="text/css" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
         <header class="navbar navbar-inverse navbar-fixed-top">
-       		<div class="container">
-       			<div class="navbar-header">
-       				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-	       				<span class="icon-bar"></span>
-	       				<span class="icon-bar"></span>
-	       				<span class="icon-bar"></span>
-	       			</button>
-	        		<a href="@routes.Application.index" class="navbar-brand">Play - Concept Proof</a>
-       			</div>
-        		<div class="navbar-collapse collapse" style="height: 1px;">
-	        		<ul class="nav navbar-nav">
-				      <li><a href="@routes.Application.index">Inicio</a></li>
-				      <li><a href="@routes.Cursos.index">Cursos</a></li>
-				      <li><a href="#">Alumnos</a></li>
-				    </ul>
-		    	</div>
-           	</div>
-        </header>
-        
-        <section id="main" class="container">
-        	<div class="row">
-        		<div class="col-md-10 col-md-offset-1">
-            	@content
-            	</div>
-            </div>
-        </section>
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+	                  <span class="icon-bar"></span>
+	                  <span class="icon-bar"></span>
+	                  <span class="icon-bar"></span>
+	          </button>
+	          <a href="#home" class="navbar-brand">Play - Concept Proof</a>
+	        </div>
+	        <div class="navbar-collapse collapse" style="height: 1px;">
+	          <ul class="nav navbar-nav">
+	            <li><a href="#home">Inicio</a></li>
+	            <li><a href="#cursos">Cursos</a></li>
+	            <li><a href="#grupos">Grupos</a></li>
+	          </ul>
+	        </div>
+	      </div>
+	    </header>
+	        
+	    <section id="main-container" class="container">
+	      <div class="row">
+	        <div class="col-md-12">
+	          <div id="main-region"></div>
+	        </div>
+	      </div>
+	    </section>
         
         <script src="@routes.Application.jsRoutes" type="text/javascript"></script>
-        @scripts
+        @helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url)
     </body>
 </html>
