--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,9 +1,47 @@
-@(message: String)
+@(title: String)
 
-@main("Welcome to Play 2.1") {
-    
-    @* @play20.welcome(message, style = "Java") *@
-    
-    @message
-    
-}
+<!DOCTYPE html>
+
+<html lang="es">
+<head>
+<title>@title</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<link rel="stylesheet" type="text/css" media="screen"
+	href="@routes.Assets.at("stylesheets/bootstrap.css")">
+<link rel="stylesheet" type="text/css" media="screen"
+	href="@routes.Assets.at("stylesheets/main.css")">
+</head>
+<body>
+	<header class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a href="#home" class="navbar-brand">Play - Concept Proof</a>
+			</div>
+			<div class="navbar-collapse collapse" style="height: 1px;">
+				<ul class="nav navbar-nav">
+					<li><a href="#home">Inicio</a></li>
+					<li><a href="#cursos">Cursos</a></li>
+					<li><a href="#grupos">Grupos</a></li>
+				</ul>
+			</div>
+		</div>
+	</header>
+
+	<section id="main-container" class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div id="main-region"></div>
+			</div>
+		</div>
+	</section>
+
+	<script src="@routes.Application.jsRoutes" type="text/javascript"></script>
+	@helper.requireJs(core=routes.Assets.at("javascripts/lib/require.js").url, module=routes.Assets.at("javascripts/main").url)
+</body>
+</html>
